--- a/source/posts/2021/09-27-podcast-09-38.html.md
+++ b/source/posts/2021/09-27-podcast-09-38.html.md
@@ -1,5 +1,5 @@
 ---
-title: "38 выпуск 09 сезона.  и прочее"
+title: "38 выпуск 09 сезона. Turbo 7, Stimulus 3, TenderJIT, Motion One, RSpec Tracer, Theatre.js, Partytown, Elk и прочее"
 date: 2021-09-27
 tags:
  - podcasts
@@ -18,11 +18,28 @@ published: false
 
 ## Ruby
 
+ - [Turbo 7](https://world.hey.com/hotwired/turbo-7-0dd7a27f)
  - [Stimulus 3](https://world.hey.com/hotwired/stimulus-3-c438d432)
+ - [Rails 7 adds weekday_select and weekday_options_for_select](https://blog.saeloun.com/2021/09/22/rails-7-adds-weekday_options_for_select)
+ - [Rails 7 adds "audio" in the metadata for video files](https://blog.saeloun.com/2021/09/21/rails-7-adds-metadata-value-to-check-audio-presence-in-video-blobs)
+
+
+ - [How to Reduce Memory Bloat in Ruby](https://blog.appsignal.com/2021/09/21/how-to-reduce-memory-bloat-in-ruby.html)
+ - [Buffered IO Streams In Ruby](https://dev.to/thegnarco/buffered-io-streams-in-ruby-mhl)
+ - [TenderJIT - an experimental JIT compiler for Ruby written in Ruby](https://github.com/tenderlove/tenderjit)
+ - [RSpec Tracer - a specs dependency analyzer, flaky tests detector, tests accelerator, and coverage reporter tool](https://github.com/avmnu-sng/rspec-tracer)
 
 ## Web
 
+ - [What's new in react 18?](https://yagmurcetintas.com/journal/whats-new-in-react-18)
  - [My pain building a WYSIWYG editor with contenteditable](https://answerly.io/blog/my-pain-developing-a-wysiwyg-editor-with-contenteditable/)
+ - [How to ensure the highest quality of Software code](https://dev.to/someshthakur/how-to-ensures-highest-quality-of-software-4917)
+
+
+ - [Motion One - a new animation library, built on the Web Animations API for the smallest filesize and the fastest performance](https://motion.dev/)
+ - [Theatre.js - a JavaScript Motion Design for the Web](https://www.theatrejs.com/)
+ - [Introducing Partytown: Run Third-Party Scripts From a Web Worker](https://dev.to/adamdbradley/introducing-partytown-run-third-party-scripts-from-a-web-worker-2cnp)
+ - [Elk: a tiny JS engine for embedded systems](https://github.com/cesanta/elk)
 
 ## RWpod Cafe 26 (02.10.2021)
 
