--- a/source/posts/2021/10-25-podcast-09-42.html.md
+++ b/source/posts/2021/10-25-podcast-09-42.html.md
@@ -5,20 +5,19 @@ tags:
  - podcasts
 audio_url: "https://files.rwpod-assets.com/podcasts/09/0942.mp3"
 audio_format: "audio/mpeg"
-audio_size: 39920914
+audio_size: 42600084
 audio_aac_url: "https://files.rwpod-assets.com/podcasts/09/0942.m4a"
-audio_aac_size: 39697374
-duration: "00:41:30"
+audio_aac_size: 42372224
+duration: "00:44:18"
 small_icon: mic
 main_image: "/images/static/09/0942.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
 
 ## Ruby
 
- - [Rails 7 adds the ability to use pre-defined variants](https://dev.to/nejremeslnici/upgrade-to-stimulus-3-say-bye-to-ie11-and-celebrate-b7g)
+ - [Rails 7 adds the ability to use pre-defined variants](https://www.bigbinary.com/blog/rails-7-adds-ability-to-use-predefined-variants)
  - [Explaining Ruby Fibers](https://noteflakes.com/articles/2021-10-20-explaining-ruby-fibers)
  - [Business logic in Rails with operators](https://petr.codes/blog/rails/business-logic-with-operators/)
  - [Optimistic Locking in Rails REST APIs](https://blog.appsignal.com/2021/10/20/optimistic-locking-in-rails-rest-apis.html)
@@ -26,7 +25,7 @@ published: false
 
  - [Upgrade to Stimulus 3, say bye to IE11, and celebrate](https://dev.to/nejremeslnici/upgrade-to-stimulus-3-say-bye-to-ie11-and-celebrate-b7g)
  - [Closure_tree lets your ActiveRecord models act as nodes in a tree data structure](https://github.com/ClosureTree/closure_tree)
- - [RSpec Tracer - a specs dependency analyzer, flaky tests detector, tests accelerator, and coverage reporter tool](https://github.com/avmnu-sng/rspec-tracer)
+ - [RSpec Tracer - a specs dependency analyzer, flaky tests detector, tests accelerator, and coverage reporter tool](https://github.com/avmnu-sng/rspec-tracer/releases/tag/v1.0.0)
 
 ## Web
 
