--- a/source/posts/2021/11-08-podcast-09-43.html.md
+++ b/source/posts/2021/11-08-podcast-09-43.html.md
@@ -1,17 +1,16 @@
 ---
-title: "43 выпуск 09 сезона. Prettier Ruby 2.0.0, New React Docs, Caffeinate, Gammo, Cytoscape.js, Vizzu и прочее"
-date: 2021-11-01
+title: "43 выпуск 09 сезона. Prettier Ruby 2.0.0, React Router v6, Async Ruby, Caffeinate, Gammo, Cytoscape.js, Vizzu и прочее"
+date: 2021-11-08
 tags:
  - podcasts
 audio_url: "https://files.rwpod-assets.com/podcasts/09/0943.mp3"
 audio_format: "audio/mpeg"
-audio_size: 42600084
+audio_size: 44311592
 audio_aac_url: "https://files.rwpod-assets.com/podcasts/09/0943.m4a"
-audio_aac_size: 42372224
-duration: "00:44:18"
+audio_aac_size: 44047406
+duration: "00:46:05"
 small_icon: mic
 main_image: "/images/static/09/0943.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -19,9 +18,9 @@ published: false
 ## Ruby
 
  - [Rails 7 adds database-specific setup and reset tasks for multi DB configurations](https://blog.saeloun.com/2021/10/27/rails-7-adds-database-specific-setup)
- - [Publishing Gems With Your YubiKey](https://tenderlovemaking.com/2021/10/26/publishing-gems-with-your-yubikey.html)
- - [Supporting fractions in Ruby/Rails](https://www.benpickles.com/articles/85-supporting-fractions-in-ruby-rails)
- - [Testing your JSON API in Ruby with dry-rb](https://medium.com/@paulgoetze/testing-your-json-api-in-ruby-with-dry-rb-dffb6a9bccdf)
+ - [Async Ruby](https://brunosutic.com/blog/async-ruby)
+ - [GitHub Issue-style File Uploader Using Stimulus and Active Storage](https://hybrd.co/posts/github-issue-style-file-uploader-using-stimulus-and-active-storage)
+ - [Ruby Structs](https://www.alchemists.io/articles/ruby_structs/)
 
 
  - [Rack Middlewares in Ruby on Rails](https://ignaciochiazzo.medium.com/rack-middlewares-using-ruby-on-rails-af690b7bc3f8)
@@ -32,14 +31,15 @@ published: false
 ## Web
 
  - [The New React Docs, In Progress and Now In Beta](https://beta.reactjs.org/)
- - [A Visual Guide to React Rendering - Cheat Sheet](https://alexsidorenko.com/blog/react-render-cheat-sheet/)
+ - [React Router v6](https://remix.run/blog/react-router-v6)
  - [Photoshop's journey to the web](https://web.dev/ps-on-the-web/)
+ - [Get started with Medusa Part 1: the open-source alternative to Shopify](https://dev.to/medusajs/get-started-with-medusa-the-open-source-alternative-to-shopify-305j)
 
 
- - [A spooky error when you have a string bigger than 512MB in Chrome](https://cmdcolin.github.io/2021-10-30-spooky.html)
+ - [Record, replay and measure user flows](https://developer.chrome.com/docs/devtools/recorder/)
  - [Cytoscape.js - graph theory (network) library for visualisation and analysis](https://js.cytoscape.org/)
  - [Vizzu - Library for animated data visualizations and data stories](https://github.com/vizzuhq/vizzu-lib)
-
+ - [Liqe - lightweight and performant Lucene-like parser and search engine](https://github.com/gajus/liqe)
 
 ## RWpod Cafe 27 (04.12.2021)
 
