--- a/source/posts/2021/11-15-podcast-09-44.html.md
+++ b/source/posts/2021/11-15-podcast-09-44.html.md
@@ -34,6 +34,7 @@ published: false
  - [Rust Is The Future of JavaScript Infrastructure](https://leerob.io/blog/rust)
 
 
+ - [Bree - the best job scheduler for Node.js and JavaScript](https://jobscheduler.net/#/)
  - [Teaful: tiny, easy and powerful React state management](https://aralroca.com/blog/teaful)
  - [Recoil - an experimental set of utilities for state management with React](https://github.com/facebookexperimental/Recoil/releases/tag/0.5.2)
  - [React Freeze - prevent React component subtrees from rendering](https://github.com/software-mansion-labs/react-freeze)
