--- a/source/posts/2021/11-29-podcast-09-46.html.md
+++ b/source/posts/2021/11-29-podcast-09-46.html.md
@@ -34,6 +34,7 @@ published: false
 
  - [Remix is a framework for building better websites using modern web standards and best practices](https://remix.run/)
  - [Using WebAssembly (created in Rust) for Fast React Components](https://www.joshfinnie.com/blog/using-webassembly-created-in-rust-for-fast-react-components/)
+ - [Proposals.es - a website for keeping up to date with ECMAScript proposals](https://www.proposals.es/)
 
 
  - [Electron Fiddle - the easiest way to get started with Electron](https://github.com/electron/fiddle)
