--- a/source/posts/2021/12-06-podcast-09-47.html.md
+++ b/source/posts/2021/12-06-podcast-09-47.html.md
@@ -20,12 +20,14 @@ published: false
 
  - [Rails 7 introduces partial_inserts config for ActiveRecord](https://blog.kiprosh.com/rails-7-introduces-partial-inserts-config-for-activerecord/)
  - [Kubing Rails: stressless Kubernetes deployments with Kuby](https://evilmartians.com/chronicles/kubing-rails-stressless-kubernetes-deployments-with-kuby)
+ - [How Lazy Evaluation Works in Ruby](https://betterprogramming.pub/how-lazy-evaluation-works-in-ruby-a90237e99ac3)
 
 
  - [Programmers should stop celebrating incompetence](https://world.hey.com/dhh/programmers-should-stop-celebrating-incompetence-de1a4725)
  - [Lambdakiq - ActiveJob on SQS and Lambda](https://github.com/customink/lambdakiq)
  - [AutoHtml - a collection of filters that transforms plain text into HTML code](https://github.com/dejan/auto_html)
  - [RSyntaxTree - yet another syntax tree generator made with Ruby and RMagick](https://yohasebe.com/rsyntaxtree/)
+ - [ASMREPL - a REPL for assembly language](https://github.com/tenderlove/asmrepl)
  - [Refactoring Javascript with Stimulus Values API & Defaults (video)](https://gorails.com/episodes/refactoring-javascript-with-stimulus-values-api-defaults)
 
 ## Web
