--- a/source/posts/2021/12-06-podcast-09-47.html.md
+++ b/source/posts/2021/12-06-podcast-09-47.html.md
@@ -1,5 +1,5 @@
 ---
-title: "47 выпуск 09 сезона.  и прочее"
+title: "47 выпуск 09 сезона. Kubing Rails, Web Almanac, CSS Concepts, Lambdakiq, Floating UI, Ladda, TEGA и прочее"
 date: 2021-12-06
 tags:
  - podcasts
@@ -32,7 +32,19 @@ published: false
 
 ## Web
 
+ - [Web Almanac (2021)](https://almanac.httparchive.org/en/2021/)
+ - [React state management in 2022 — Return of the Redux](https://medium.com/@kolbysisk/react-state-management-in-2022-return-of-the-redux-87218f56486b)
+ - [4x smaller, 50x faster](https://blog.asciinema.org/post/smaller-faster/)
+ - [CSS Concepts - The one and only guide you need](https://dev.to/weifengnusceg/css-concepts-the-one-and-only-guide-you-need-bb6)
 
+
+ - [Floating UI - JavaScript positioning library for tooltips, popovers, dropdowns, and more](https://www.floating-ui.com/)
+ - [Mitosis - write components once, run everywhere](https://github.com/BuilderIO/mitosis)
+ - [RAJI - Really Async JSON Interface: a non-blocking alternative to JSON.parse to keep web UIs responsive](https://github.com/federico-terzi/raji)
+ - [Ladda - a UI concept which merges loading indicators into the action that invoked them](https://lab.hakim.se/ladda/)
+ - [TEGA - a TypeScript library (also usable in JS) for programming and creating GameBoy ROM images that can be played in an emulator or on real hardware via a flashcart](https://github.com/francisrstokes/tega)
+ - [Chalk 5.0.0 - terminal string styling done right](https://github.com/chalk/chalk/releases/tag/v5.0.0)
+ - [Open Source CSS Variables](https://open-props.style/)
 
 
 READMORE
