--- a/source/posts/2021/12-13-podcast-09-48.html.md
+++ b/source/posts/2021/12-13-podcast-09-48.html.md
@@ -5,13 +5,12 @@ tags:
  - podcasts
 audio_url: "https://files.rwpod-assets.com/podcasts/09/0948.mp3"
 audio_format: "audio/mpeg"
-audio_size: 48341888
+audio_size: 36316730
 audio_aac_url: "https://files.rwpod-assets.com/podcasts/09/0948.m4a"
-audio_aac_size: 48071076
-duration: "00:50:17"
+audio_aac_size: 36095275
+duration: "00:37:45"
 small_icon: mic
 main_image: "/images/static/09/0948.png"
-published: false
 ---
 
 Добрый день уважаемые слушатели. Представляем новый выпуск подкаста RWpod. В этом выпуске:
@@ -30,7 +29,7 @@ published: false
 
 ## Web
 
- - [Exploiting JNDI Injections in Java](https://www.veracode.com/blog/research/exploiting-jndi-injections-java)
+ - [A Log4J Vulnerability Has Set the Internet 'On Fire'](https://www.wired.com/story/log4j-flaw-hacking-internet/)
  - [Technologies using Apache Log4j](https://gist.github.com/noperator/d360de81c061bc9c628b12d3f0e1e479)
  - [Tailwind CSS v3.0](https://tailwindcss.com/blog/tailwindcss-v3)
  - [Defensive CSS](https://ishadeed.com/article/defensive-css/)
