--- a/source/posts/2022/01-17-podcast-10-02.html.md
+++ b/source/posts/2022/01-17-podcast-10-02.html.md
@@ -41,6 +41,7 @@ published: false
  - [React-Grid-Layout - a grid layout system](https://github.com/react-grid-layout/react-grid-layout)
  - [Elf - a Reactive Store with Magical Powers](https://ngneat.github.io/elf/)
  - [Tinybase - a tiny, reactive JavaScript library for structured state and tabular data](https://tinybase.org/)
+ - [Danfojs - powerful javascript data analysis toolkit](https://github.com/javascriptdata/danfojs)
  - [Ohm - a library and language for building parsers, interpreters, compilers, etc](https://github.com/harc/ohm)
 
 READMORE
