--- a/source/posts/2022/01-25-podcast-10-03.html.md
+++ b/source/posts/2022/01-25-podcast-10-03.html.md
@@ -1,6 +1,6 @@
 ---
-title: "03 выпуск 10 сезона.  и прочее"
-date: 2022-01-24
+title: "03 выпуск 10 сезона. Porting YJIT to Rust, Webpacker has been retired, Remix vs Next.js, Vanilla List и прочее"
+date: 2022-01-25
 tags:
  - podcasts
 audio_url: "https://files.rwpod-assets.com/podcasts/10/1003.mp3"
@@ -21,15 +21,24 @@ published: false
  - [Porting YJIT to Rust](https://bugs.ruby-lang.org/issues/18481)
  - [Webpacker has been retired](https://github.com/rails/webpacker#webpacker-has-been-retired-)
  - [Happy 10th Birthday, Sidekiq!](https://www.mikeperham.com/2022/01/17/happy-10th-birthday-sidekiq/)
- - [Reduce your method calls by 99.9% by replacing Thread#pass with Queue#pop](https://mensfeld.pl/2022/01/reduce-your-method-calls-by-99-9-by-replacing-threadpass-with-queuepop/)
  - [Bad Ruby: Hash Value Omission](https://batsov.com/articles/2022/01/20/bad-ruby-hash-value-omission/)
 
 
- - [SOLID principles](https://longliveruby.com/articles/ruby-solid-principles)
+ - [Reduce your method calls by 99.9% by replacing Thread#pass with Queue#pop](https://mensfeld.pl/2022/01/reduce-your-method-calls-by-99-9-by-replacing-threadpass-with-queuepop/)
+ - [Lecter - show executable code by request](https://github.com/Neodelf/lecter)
  - [OnlineMigrations - catch unsafe PostgreSQL migrations in development and run them easier in production](https://github.com/fatkodima/online_migrations)
+ - [PostgreSQL бесплатные книги](https://postgrespro.ru/education/books)
 
 ## Web
 
+ - [Remix vs Next.js](https://remix.run/blog/remix-vs-next)
+ - [TypeScript Features to Avoid](https://www.executeprogram.com/blog/typescript-features-to-avoid)
+ - [Replacing jQuery (110kb) With Umbrella JS (8kb)](https://www.bennadel.com/blog/4184-replacing-jquery-110kb-with-umbrella-js-8kb.htm#main-content)
+
+
+ - [Vanilla List - a Directory of Vanilla JavaScript Plugins](https://vanillalist.top/)
+ - [Open sourcing Chirpy](https://chirpy.dev/blog/open-source)
+ - [CSS Fingerprint](https://csstracking.dev/)
 
 
 READMORE
